1.9.0 (not yet released)
 * add pj_list module level variable (a dict mapping short
   projection names to longer descriptions, e.g. 
   pyproj.pj_list['aea'] = 'Albers Equal Area').
 * fix constant in Robinson projection (from proj4 svn).
1.8.9 (svn revision 222)
 * Python 3 now supported.
 * allow 'EPSG' init (as well as 'epsg'). This only worked on case-insensitive
   filesystems previously. Fixes issue 6.
 * added inverse to Hammer projection.
 * updated src/pj_mutex.c from proj4 svn to fix a threading issue on windows
   (issue 25). Windows binary installers updated (version 1.8.8-1), courtesy
   Christoph Gohlke.
 * if inputs are NaNs, return huge number (1.e30).
1.8.8 (svn revision 196)
 * add extra datum shift files, added test/test_datum.py (fixes issue 22).
   datum shifts now work correctly in transform function.
1.8.7 (svn revision 175)
 * reverted pj_init.c to old version (from proj4 4.6.1) because version in
   4.7.0 includes caching code that can cause segfaults in pyproj (issue 19).
 * added 'preserve_units' keyword to Proj.__init__ to suppress conversion
   to meters.
1.8.6 (svn revision 169)
 * now works with ms vs2008, vs2003 (fixed missing isnan).
 * updated to proj 4.7.0 (fixes a problem coexisting with pyqt).
 * allow Geod instance to be initialized using a proj4 string 
1.8.5 (svn revision 155)
 * allow Proj instance to be initialized using a proj4 string 
   (instead of just a dict or kwargs).
1.8.4 (svn revision 151)
 * updated proj4 sources to version 4.6.0
1.8.3 (svn revision 146):
 * fixed bug in Geod class that caused erroneous error message
   "undefined inverse geodesic (may be an antipodal point)".
 * fix __reduce__ method of Geod class so instances can be pickled.
 * make sure points outside projection limb are set to 1.e30 on inverse
   transform (if errcheck=False).
 * fixed small setup.py bug.
 * generate C source with Cython 0.9.6.6 (pycompat.h no longer needed).
1.8.2: