@@ -86,6 +86,7 @@ pj_list={
 'eck6': "Eckert VI",
 'eqc': "Equidistant Cylindrical (Plate Caree,",
 'eqdc': "Equidistant Conic",
+'etmerc': "Extended Transverse Mercator" ,
 'euler': "Euler",
 'fahey': "Fahey",
 'fouc': "Foucaut",
@@ -101,6 +102,7 @@ pj_list={
 'gs50': "Mod. Stererographics of 50 U.S.",
 'hammer': "Hammer & Eckert-Greifendorff",
 'hatano': "Hatano Asymmetrical Equal Area",
+'igh':  "Interrupted Goode Homolosine",
 'imw_p': "Internation Map of the World Polyconic",
 'kav5': "Kavraisky V",
 'kav7': "Kavraisky VII",
