@@ -1,4 +1,6 @@
 1.9.0 (not yet released)
+ * added 'etmerc' and 'igh' projections from proj4 svn.
+ * changed DTOL to 1.e-8 in geod_inv.c (issue 18).
  * add pj_list module level variable (a dict mapping short
    projection names to longer descriptions, e.g. 
    pyproj.pj_list['aea'] = 'Albers Equal Area').
